src/App.scss
@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");

// Main body styles
body {
  padding-bottom: 9%;
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p {
    color: white;
  }
  background: linear-gradient(rgb(46, 0, 49), black);
  text-align: center;
  font-size: 62.5%;
  h1 {
    font-size: 5rem;
  }
  h2 {
    font-size: 4rem;
  }
  h3 {
    font-size: 3.5rem;
  }
  h4 {
    font-size: 3rem;
  }
  h5 {
    font-size: 2.5rem;
  }
  h6 {
    font-size: 2rem;
  }
  p {
    font-size: 1.6rem;
  }
}

// Navigation styles
nav {
  width: 100%;
  border: 1px solid blue;
  background: linear-gradient(
    to right,
    white,
    rgb(0, 94, 184),
    rgb(0, 94, 184)
  );
  background-color: rgb(0, 94, 184);
  padding: 1.5% 0;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  a {
    margin: 1%;
    padding: 0.5% 1%;
    color: white;
    font-family: "Permanent Marker", cursive;
    font-size: 1.2rem;
    transition-duration: 300ms;

    &:hover {
      text-shadow: white 1px 1px 5px;
      color: rgb(5, 34, 129);
    }
  }
  a:first-child {
    justify-self: flex-start;
    font-size: 3rem;
    text-decoration: none;
    justify-self: left;
    color: rgb(255, 255, 255);
    text-shadow: black 1px 1px 5px;
    padding: 0.5%;
    &:hover {
      text-shadow: white 1px 1px 5px;
      color: rgb(5, 34, 129);
    }
  }
  a:last-child {
    &:hover {
      color: white;
      text-shadow: none;
      cursor: default;
    }
  }
}

// Top main banner styles
h1 {
  position: absolute;
  z-index: 1;
  width: 100%;
  top: 20%;
}
.banner {
  background-image: url("./imgs/alexander-popov-JhYnL-BiP18-unsplash.jpg");
  height: 50vh;
  background-position-y: center;
  background-size: cover;
  background-repeat: no-repeat;
  filter: blur(3px);
  display: flex;
  justify-content: center;
  align-items: center;
  h1,
  h2 {
    color: white;
    text-shadow: 0px 0px black, 0px 1px white, black 3px 3px;
  }
}
.social {
  h3 {
    padding-bottom: 2%;
  }
  padding-bottom: 5%;

  .bubble_holder {
    width: 60%;
    margin: 0 auto;
    display: flex;
    justify-content: space-around;
    i {
      color: white;
      background: linear-gradient(
        rgba(255, 255, 255, 0.15),
        rgba(255, 255, 255, 0.19),
        rgba(255, 255, 255, 0.39),
        rgba(255, 255, 255, 0.19),
        rgba(255, 255, 255, 0.15)
      );
      border: 1px solid white;
      border-radius: 180%;
      padding: 5%;
    }
    .bubble_me {
      border: 1px solid black;
      border-radius: 50%;
      width: max-content;
    }
  }
}
.djs {
  width: 80%;
  margin: 0 10%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  column-gap: 3%;
  row-gap: 1%;
  img {
    width: 100%;
    margin: 0 auto;
  }
}

.player {
  border: 1px solid white;
  position: fixed;
  z-index: 1;
  width: 100%;
  bottom: 0;

  .controls {
    padding: 1%;
    width: 60%;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    i {
      padding: 1%;
      border: 1px solid black;
      border-radius: 100%;
    }
  }

  border: 1px solid blue;
  background: linear-gradient(to left, white, rgb(0, 94, 184), rgb(0, 94, 184));
  background-color: rgb(0, 94, 184);
}

